# hub-orgs

./: .dockerignore  .env  .env.dev  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  hydra.yml  mod.rs  prelude.rs  project_credentials.rs  setup_db.sh
.github/workflows/: apollo_release.yml  cargo.yml  cargo_test.yml  post.yml  release.yaml  release.yml  rust.yml
api/: Cargo.toml  proto.toml
api/src/: api.rs  db.rs  event.proto  handlers.rs  lib.rs  main.rs  ory_client.rs  svix_client.rs  test.rs
api/src/apis/: credentials.rs  invites.rs  mod.rs  organizations.rs  projects.rs  users.rs  webhooks.rs
api/src/dataloaders/: credential.rs  invite.rs  member.rs  mod.rs  organization.rs  project.rs  project_credential.rs  user.rs  webhook_projects.rs
api/src/entities/: credentials.rs  invites.rs  members.rs  mod.rs  organizations.rs  owners.rs  project_credentials.rs  projects.rs  sea_orm_active_enums.rs  webhook_projects.rs  webhooks.rs
api/src/mutations/: credential.rs  invite.rs  member.rs  mod.rs  organization.rs  project.rs  webhook.rs
api/src/queries/: credential.rs  invite.rs  invites.rs  mod.rs  organization.rs  project.rs  user.rs  webhook.rs
app/: Cargo.toml
app/src/: handlers.rs  lib.rs  main.rs
app/src/apis/: invites.rs  members.rs  organizations.rs
app/src/entities/: mod.rs  organizations.rs  project_credentials.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/db/: mod.rs  mutation.rs  query.rs
crates/core/src/db/migrations/: m20221210_190223_create_organizations_table.rs  mod.rs
crates/graphql/: Cargo.toml
crates/graphql/src/: main.rs  mod.rs
crates/graphql/src/mutations/: mod.rs  organization.rs
crates/graphql/src/mutations/objects/: mod.rs  organization.rs
crates/graphql/src/queries/: mod.rs  organization.rs
migration/: Cargo.toml  Dockerfile  m20221212_170906_organizations.rs  mod.rs
migration/src/: lib.rs  m20221215_150612_create_organizations_table.rs  m20221217_004651_owners_table.rs  m20221219_134917_create_projects_table.rs  m20221219_141929_create_invites_table.rs  m20221219_141934_create_members_table.rs  m20230113_044004_create_credentials_table.rs  m20230113_044805_create_project_credentials_table.rs  m20230121_045004_add_svix_app_id_column_to_organizations_table.rs  m20230124_165007_webhooks_table.rs  m20230124_171112_webhook_projects_table.rs  m20230202_180215_add_slug_to_organizations.rs  m20230208_144934_drop_slug_from_organizations.rs  m20230215_092536_add_invite_id_to_members.rs  m20230223_114331_drop_credentials_and_project_credentials_tables.rs  m20230301_000808_delete_webhook_projects_table.rs  m20230301_000812_delete_webhooks_table.rs  m20230301_004428_remove_svix_app_id_column.rs  m20230306_093249_add_profile_image_url_to_organizations.rs  m20230306_093255_add_profile_image_url_to_projects.rs  m20230404_143904_add_deactivated_at_column_to_members_table.rs  m20230510_154238_set_default_timestamp_to_utc.rs  m20230518_034509_set_default_timestamp.rs  m20230519_050922_change_email_datatype_to_citext.rs  m20230622_150710_remove_unique_org_name_constraint.rs  main.rs
src/: db.rs  lib.rs  main.rs
src/db/: client.rs  mod.rs  mutation.rs  query.rs
src/entities/: invites.rs  mod.rs  organizations.rs  projects.rs
src/graphql/: input_objects.rs  mod.rs  mutation_root.rs  query_root.rs
src/migrations/: mod.rs
src/mutations/: invite.rs  mod.rs  organization.rs  project.rs
src/queries/: mod.rs  organization.rs  project.rs  user.rs
