[package]
name = "hub-orgs"
version = "0.1.0"
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
description = "Holaplex Hub organization service"
readme = "./README.md"
repository = "https://github.com/holaplex/indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "hub", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]
default-run = "migrator"

[[bin]]
name = "migrator"
path = "src/bin/migrator.rs"

[[bin]]
name = "graphql"
path = "src/bin/graphql.rs"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "thin"

[profile.docker]
inherits = "release"
strip = "symbols"

[dependencies]
sea-orm-migration = { version = "^0.10.0", features = ["sqlx-postgres"] }
sea-orm = { version = "^0.10.0" , features = [ "debug-print", "runtime-async-std-native-tls", "sqlx-postgres" ] }
async-graphql = { version = "5.0.3", features = ["chrono", "uuid", "log", "dataloader"] }
poem = "1.3.50"
async-graphql-poem = "5.0.3"
async-std = { version = "^1", features = ["attributes", "tokio1"] }
chrono = "0.4.23"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.0.22", features = ["derive", "env"] }
anyhow = "1.0.66"
dotenv = "0.15.0"
uuid = "1.2.2"
log = "0.4.17"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10.0"