[package]
name = "holaplex-hub-orgs"
version = "0.1.0"
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
description = "Holaplex Hub organization service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-orgs"
license = "AGPL-3.0-or-later"
keywords = ["hub", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[dependencies]
sea-orm = { version = "^0.10.0" , features = [ "mock", "debug-print", "runtime-tokio-rustls", "sqlx-postgres" ] }
async-graphql = { version = "5.0.4", features = ["chrono", "uuid", "log", "dataloader", "apollo_tracing"] }
poem = { version = "1.3.50", features = ["anyhow", "test"] }
async-graphql-poem = "5.0.3"
async-std = { version = "^1", features = ["attributes", "tokio1"] }
serde = { version = "1.0.152", features = ["derive"] }
ory-openapi-generated-client = { package = "ory-client", version = "1.1.5" }

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.1.0"
path = "../../hub2/crates/core"
features = ["kafka"]
