[package]
name = "hub-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "hub_core"
path = "src/lib.rs"

[[bin]]
name = "db-migrator"
path = "src/bin/migrator.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
async-graphql = { version = "5.0.3", features = ["chrono", "uuid", "log", "dataloader"] }
chrono = "0.4.23"
sea-orm-migration = { version = "^0.10.0", features = ["sqlx-postgres"] }
sea-orm = { version = "^0.10.0" , features = [ "debug-print", "runtime-async-std-native-tls", "sqlx-postgres" ] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4.0.22", features = ["derive", "env"] }
anyhow = "1.0.66"
dotenv = "0.15.0"
uuid = "1.2.2"
log = "0.4.17"